// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ticket Tailor Coldharbour Blue retrieve and find events 1`] = `[]`;

exports[`Ticket Tailor Curzon Wimbledon retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 7200000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/wimbledonfilmclub/2335962",
        "format": {},
        "notes": "Presented by Wimbledon Film Club",
        "status": {},
        "time": 1791919800000,
      },
    ],
    "showingId": "tickettailor.com-2335962",
    "title": "Two Prosecutors",
    "url": "https://www.tickettailor.com/events/wimbledonfilmclub/2335962",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 6300000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/wimbledonfilmclub/2335946",
        "format": {},
        "notes": "Presented by Wimbledon Film Club",
        "status": {},
        "time": 1793737800000,
      },
    ],
    "showingId": "tickettailor.com-2335946",
    "title": "Virginia Woolf's Night & Day",
    "url": "https://www.tickettailor.com/events/wimbledonfilmclub/2335946",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 6300000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/wimbledonfilmclub/2335990",
        "format": {},
        "notes": "Presented by Wimbledon Film Club",
        "status": {},
        "time": 1794947400000,
      },
    ],
    "showingId": "tickettailor.com-2335990",
    "title": "Dragonfly",
    "url": "https://www.tickettailor.com/events/wimbledonfilmclub/2335990",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 6300000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/wimbledonfilmclub/2336016",
        "format": {},
        "notes": "Presented by Wimbledon Film Club",
        "status": {},
        "time": 1795552200000,
      },
    ],
    "showingId": "tickettailor.com-2336016",
    "title": "Nouvelle Vague",
    "url": "https://www.tickettailor.com/events/wimbledonfilmclub/2336016",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 7200000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/wimbledonfilmclub/2336025",
        "format": {},
        "notes": "Presented by Wimbledon Film Club",
        "status": {},
        "time": 1796761800000,
      },
    ],
    "showingId": "tickettailor.com-2336025",
    "title": "Rental Family",
    "url": "https://www.tickettailor.com/events/wimbledonfilmclub/2336025",
  },
]
`;

exports[`Ticket Tailor Good Shepherd Studios retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 5400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/weflockcic/2446515",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791480600000,
      },
    ],
    "showingId": "tickettailor.com-2446515",
    "title": "Evening Focus Group: Share Your Thoughts on Good Shepherd Studios & Beyond",
    "url": "https://www.tickettailor.com/events/weflockcic/2446515",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 5400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/weflockcic/2446766",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791633600000,
      },
    ],
    "showingId": "tickettailor.com-2446766",
    "title": "Weekend Focus Group: Share Your Thoughts on Good Shepherd Studios & Beyond",
    "url": "https://www.tickettailor.com/events/weflockcic/2446766",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 9000000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/weflockcic/2440497",
        "format": {},
        "notes": "Presented by Waltham Forest Cinema Project",
        "status": {},
        "time": 1793302200000,
      },
    ],
    "showingId": "tickettailor.com-2440497",
    "title": "Out Laws + Q&A",
    "url": "https://www.tickettailor.com/events/weflockcic/2440497",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 9000000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/weflockcic/2440506",
        "format": {},
        "notes": "Presented by Waltham Forest Cinema Project",
        "status": {},
        "time": 1794511800000,
      },
    ],
    "showingId": "tickettailor.com-2440506",
    "title": "Simone Barbès + illustrated talk",
    "url": "https://www.tickettailor.com/events/weflockcic/2440506",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 9000000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/weflockcic/2440524",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1795116600000,
      },
    ],
    "showingId": "tickettailor.com-2440524",
    "title": "The Fantasy of Deer Warrior",
    "url": "https://www.tickettailor.com/events/weflockcic/2440524",
  },
]
`;

exports[`Ticket Tailor Joe Allen retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 9000000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/joeallenmysteryfilms/2427629?date=2026-10-18",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792323000000,
      },
    ],
    "showingId": "tickettailor.com-2427629",
    "title": "Joe Allen Sunday Mystery Movie - Lunch Showing",
    "url": "https://www.tickettailor.com/events/joeallenmysteryfilms/2427629?date=2026-10-18",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 9000000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/joeallenmysteryfilms/2427660?date=2026-10-18",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792333800000,
      },
    ],
    "showingId": "tickettailor.com-2427660",
    "title": "Joe Allen Sunday Mystery Movie - Late Afternoon Showing",
    "url": "https://www.tickettailor.com/events/joeallenmysteryfilms/2427660?date=2026-10-18",
  },
]
`;

exports[`Ticket Tailor Lost Cinema retrieve and find events 1`] = `[]`;

exports[`Ticket Tailor Siobhan Davies Studios retrieve and find events 1`] = `[]`;

exports[`Ticket Tailor Staffordshire St retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 14400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/staffordshirestcic/2304999",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790964000000,
      },
    ],
    "showingId": "tickettailor.com-2304999",
    "title": "STST a Night of Folk | The Way of the Roadwytch x Festival of Community",
    "url": "https://www.tickettailor.com/events/staffordshirestcic/2304999",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 18000000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/staffordshirestcic/2305000",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791025200000,
      },
    ],
    "showingId": "tickettailor.com-2305000",
    "title": "STST Open Studios | The Way of the Roadwytch x Festival of Community",
    "url": "https://www.tickettailor.com/events/staffordshirestcic/2305000",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 14400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/staffordshirestcic/2418704",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792083600000,
      },
    ],
    "showingId": "tickettailor.com-2418704",
    "title": "Staffordshire St presents Abdollah Nafisi | 'I Can't Meditate' opening party",
    "url": "https://www.tickettailor.com/events/staffordshirestcic/2418704",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 9000000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/staffordshirestcic/2438647",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792261800000,
      },
    ],
    "showingId": "tickettailor.com-2438647",
    "title": "STST Lates | donut deconstructed",
    "url": "https://www.tickettailor.com/events/staffordshirestcic/2438647",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/staffordshirestcic/2438663",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793300400000,
      },
    ],
    "showingId": "tickettailor.com-2438663",
    "title": "STST Word Club | I Can't Meditate",
    "url": "https://www.tickettailor.com/events/staffordshirestcic/2438663",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 18000000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/staffordshirestcic/2438680",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793451600000,
      },
    ],
    "showingId": "tickettailor.com-2438680",
    "title": "STST presents | moving, listening, talking",
    "url": "https://www.tickettailor.com/events/staffordshirestcic/2438680",
  },
]
`;

exports[`Ticket Tailor The Haggerston retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 12600000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/midweekcinema/2408971?date=2026-10-05",
        "format": {},
        "notes": "Presented by Midweek Cinema",
        "status": {},
        "time": 1791223200000,
      },
    ],
    "showingId": "tickettailor.com-2408971",
    "title": "Central Station (1998)",
    "url": "https://www.tickettailor.com/events/midweekcinema/2408971?date=2026-10-05",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 12600000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/midweekcinema/2412899?date=2026-10-19",
        "format": {},
        "notes": "Presented by Midweek Cinema",
        "status": {},
        "time": 1792432800000,
      },
    ],
    "showingId": "tickettailor.com-2412899",
    "title": "Paper Moon (1973)",
    "url": "https://www.tickettailor.com/events/midweekcinema/2412899?date=2026-10-19",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 12600000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/midweekcinema/2408932?date=2026-11-03",
        "format": {},
        "notes": "Presented by Midweek Cinema",
        "status": {},
        "time": 1793732400000,
      },
    ],
    "showingId": "tickettailor.com-2408932",
    "title": "Sunset Boulevard (1950)",
    "url": "https://www.tickettailor.com/events/midweekcinema/2408932?date=2026-11-03",
  },
]
`;

exports[`Ticket Tailor The Mall Tavern retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 12600000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/midweekcinema/2408813?date=2026-10-21",
        "format": {},
        "notes": "Presented by Midweek Cinema",
        "status": {},
        "time": 1792605600000,
      },
    ],
    "showingId": "tickettailor.com-2408813",
    "title": "The Panic in Needle Park (1971)",
    "url": "https://www.tickettailor.com/events/midweekcinema/2408813?date=2026-10-21",
  },
]
`;
